--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900|Palanquin+Dark:400,600" rel="stylesheet">
     <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
-    <title>React App</title>
+    <title>Hannah's Mic App</title>
   </head>
   <body>
     <div id="root"></div>
